	- Changed the way events are raised to prevent variable corruption.
	- Reload GlobalGroups when you perform a world load.
	- Changed GlobalGroups to save/load before local groups in the scheduled data saving/loading
	- Fix 'manucheckp' to correctly report if a permission is available from GroupManager or Bukkit.
	- Changed over to a reflection method for populating superperms as Bukkit lags when you handle permissions one at a time.
	- Major, MAJOR changes to support partial/full world mirroring.
	  You can now mirror groups.yml, users.yml or both files between different worlds.
	- Catch NullPointerErrors generated by blank permission nodes.
	- Removed '- bukkit.command' form the globalgroups permission nodes.
v 1.9:
	- Optimize populating Bukkit perms so we no longer calculate the child nodes (Bukkit already does this).
	- Added a tidy error message for invalid permission entries in GlobalGroups.
	- Better optimize assembling of a players permissions and allow the * node to populate all registered superperms.
	- Fixed text when adding a subgroup to not say the player was moved.
	- Update to new Bukkit Event system.
	- Update GroupManagerBridge for new event system.
	- Fixed a random null error upon a player portaling.
	- Fixed infinite loop error on player join.
	- Optimized code to only update the player logging in instead of all players online.
	- Added recursive loop detection for World mirroring (you may not set the main world as a mirror of another).
	- Fixed fetching world data so it no longer returns the mirrored world for groups. Each world data holder now points to the correct data set, so can be returned as an object.
	- Changed addSubGroup() to only add the group if it doesn't already exist (no need to update an already existing group).
	- addSubGroup now returns a boolean for success/failure.
	- '/manuaddsub' now correctly reports if it was able to add the sub group.